[FIX] - Header collapse animation

--- a/css/style.css
+++ b/css/style.css
@@ -579,7 +579,6 @@ a:focus {
     background-color: white;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
-    transition: height .5s ease;
     border-top: 1px solid #d8d8d8; }
     @media (max-width: 991.98px) {
       .header-dropdown .collapse,
@@ -588,6 +587,10 @@ a:focus {
         transform: none;
         box-shadow: none;
         border: none; } }
+  .header-dropdown .collapsing {
+    transition: none !important; }
+  .header-dropdown .fade {
+    transition: opacity .4s ease; }
   .header-dropdown .container {
     align-items: flex-start; }
   .header-dropdown .header-collapse-toggler {
