--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -94,7 +94,6 @@
     background-color: white;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
-    transition: height .5s ease;
     border-top: 1px solid $gray-light;
 
     @media (max-width: 991.98px) {
@@ -103,6 +102,14 @@
       box-shadow: none;
       border: none;
     }
+  }
+
+  .collapsing {
+    transition: none!important;
+  }
+
+  .fade {
+    transition: opacity .4s ease;
   }
 
   .container {
